--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <div class="container-fluid">
   <h3 class="row"> Tere hommikust {{ name }}</h3>
   <input class="row" type="text" [(ngModel)]="name">
-  <servers class="row"></servers>
 </div>
+<br>
+<br>
+
+<directive-exercise></directive-exercise>
