bootstrap and header/footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<div class="app-footer container fixed-bottom mw-100">
+  <div class="app-footer-ele row">
+    <div class="col-auto mr-auto py-1">
+      <span>App by S. Monadology</span>
+    </div>
+    <div class="col-auto ml-auto py-1">
+      <span>2019</span>
+    </div>
+  </div>
+</div>
