--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div class="app-header container mx-auto my-auto">
+  <div class="app-title row">
+    <h1 class="col-12 text-center">RQBB</h1>
+  </div>
+</div>
